kuber-homework/08/manifests/02/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: api-html
              mountPath: /usr/share/nginx/html
            
      volumes:
        - name: api-html
          configMap:
            name: api-html
