kuber-homework/08/manifests/02/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 443
      targetPort: 80
